<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_roster">

    <fragment
        android:id="@+id/nav_roster"
        android:name="com.example.practiceiv_firebase_fragments.ui.roster.RosterFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_roster" />

    <fragment
        android:id="@+id/nav_opponents"
        android:name="com.example.practiceiv_firebase_fragments.ui.opponents.OpponentsFragment"

        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_opponents" />

    <fragment
        android:id="@+id/nav_field"
        android:name="com.example.practiceiv_firebase_fragments.ui.field.FieldFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_field" />
</navigation>